# ros-project

./: .gitignore  Dockerfile  README.md  build_and_run.sh  docker-compose.yml  requirements.txt
arduino/swarm_bot/: swarm_bot.ino
devel/: .catkin
devel/lib/inventory_robot/: camera_capture.py  low_light_camera.py
devel/lib/pkgconfig/: ai.pc  core.pc  esp.pc  inventory_robot.pc
devel/share/ai/cmake/: aiConfig.cmake
devel/share/core/cmake/: coreConfig.cmake
devel/share/esp/cmake/: espConfig.cmake
devel/share/inventory_robot/cmake/: inventory_robotConfig.cmake
docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  README.md  download_sample_video.sh  requirements.txt
src/ai/launch/: ai_test.launch
src/ai/scripts/: ai_detector.py  publish_video.py
src/ai_model/: CMakeLists.txt  package.xml
src/ai_model/launch/: ai_system.launch  opencv_presence.launch
src/ai_model/scripts/: ai_fish_monitor_node.py  fish_behavior_node.py  opencv_fish_presence_node.py  water_quality_node.py
src/core/: CMakeLists.txt  README.md  package.xml
src/core/launch/: core.launch
src/core/scripts/: core_manager.py
src/esp/: CMakeLists.txt  README.md  package.xml
src/esp/arduino/: swarm_bot.ino
src/esp/launch/: aquarium_system.launch  esp_system.launch
src/esp/msg/: BotCommand.msg  BotStatus.msg
src/esp/scripts/: ai_fish_monitor_node.py  esp_decision_node.py  esp_manager.py  esp_master_node.py  esp_websocket_node.py  scheduler_node.py  swarm_bot.py  swarm_manager_node.py  websocket.py
src/esp/srv/: TriggerCleaning.srv
src/inventory_robot/: CMakeLists.txt  package.xml
src/inventory_robot/launch/: low_light_test.launch
src/inventory_robot/scripts/: fake_robot_publisher.py
src/swarm_manage/: CMakeLists.txt  package.xml
src/swarm_manage/action/: CleanTask.action
src/swarm_manage/launch/: README.md  clean_task_test_client.launch  swarm_system.launch  teleop_web.launch
src/swarm_manage/scripts/: clean_task_test_client.py  esp_decision_action_server.py  esp_decision_node.py  esp_websocket_node.py  scheduler_node.py  swarm_manager_node.py  teleop_web_node.py
src/test_ai/: CMakeLists.txt  README.md  package.xml
src/test_ai/launch/: opencv_behavior.launch  test_ai.launch
src/test_ai/scripts/: ai_simulator_node.py  opencv_behavior_node.py
training/: README.md  opencv_fish_detector.py  requirements-opencv.txt  requirements.txt  train_fish_behavior_video.py  train_fish_presence.py
