<?xml version="1.0"?>
<package format="2">
  <name>esp</name>
  <version>0.0.0</version>
  <description>ESP package: websocket and swarm bot interfaces</description>
  <maintainer email="you@example.com">You</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <license>MIT</license>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <!-- runtime dependency for Python websockets library -->
  <exec_depend>python3-websockets</exec_depend>
  <depend>geometry_msgs</depend>
  <export></export>
</package>
