<?xml version="1.0"?>
<package format="2">
  <name>swarm_manage</name>
  <version>0.0.1</version>
  <description>Swarm management package: messages, services, and control nodes.</description>

  <maintainer email="you@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>python3-websockets</exec_depend>

</package>
