<?xml version="1.0"?>
<package format="2">
  <name>test_ai</name>
  <version>0.0.1</version>
  <description>Test AI simulator that publishes random AI outputs for fish presence, behavior, and water quality.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export/>
</package>
